--- a/app/views/panels/index.html.erb
+++ b/app/views/panels/index.html.erb
@@ -17,6 +17,7 @@
       </div>
       <% end %>
   </div>
+  <div class="action">
+    <%= link_to 'New Panel', new_panel_path, class: "button-action center" %>
+  </div>
 </div>
-
-<%= link_to 'New Panel', new_panel_path, class: "button-action center" %>
