--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,7 +4,8 @@ header {
   left: 0;
   width: 100%;
   padding: 25px 0;
-  background-color: #eaeaea;
+  background-color: #4591bf;
+  color: white;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   h1 {
     display: inline-block;
@@ -29,6 +30,7 @@ header {
         display: inline-block;
         color: #333;
         padding: 0 20px;
+        color: white;
       }
     }
   }
