--- a/app/views/panels/_form.html.erb
+++ b/app/views/panels/_form.html.erb
@@ -1,57 +1,68 @@
-<%= form_for(panel) do |f| %>
-  <% if panel.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(panel.errors.count, "error") %> prohibited this panel from being saved:</h2>
+<div class="box-container">
+  <%= form_for(panel) do |f| %>
+    <% if panel.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(panel.errors.count, "error") %> prohibited this panel from being saved:</h2>
 
-      <ul>
-      <% panel.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% panel.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :title, "Titre *" %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :description, "Description" %>
+      <%= f.text_field :description, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :colors_count, "Nombre de couleurs choisies (les 3 premières seront sélectionnées)" %>
+      <%= select_tag(:colors_count, options_for_select(3...7), class:"form-control") %>
+    </div>
+
+    <div class="colors-form">
+      <p class="mention">Liste des couleurs</p>
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color1, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color2, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color3, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color4, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color5, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+
+      <div class="form-group inline panel-color visible">
+        <%= f.color_field :color6, class: "form-control panel-color-color" %>
+        <input type="text" class="panel-color-text form-control">
+      </div>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Créer", class:"button-action large" %>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color1 %>
-    <%= f.color_field :color1 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color2 %>
-    <%= f.color_field :color2 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color3 %>
-    <%= f.color_field :color3 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color4 %>
-    <%= f.color_field :color4 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color5 %>
-    <%= f.color_field :color5 %>
-  </div>
-
-  <div class="field">
-    <%= f.label :color6 %>
-    <%= f.color_field :color6 %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
