--- a/app/views/panels/new.html.erb
+++ b/app/views/panels/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Panel</h1>
+<div id="new">
+  <h1>Créer votre panel</h1>
 
-<%= render 'form', panel: @panel %>
+  <%= render 'form', panel: @panel %>
 
-<%= link_to 'Back', panels_path %>
+</div>
