--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -6,6 +6,11 @@
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: white;
   margin: 20px;
+  .description {
+    text-align: center;
+    margin-top: 15px;
+  }
+
   .title {
     text-align: center;
     text-transform: uppercase;
@@ -36,8 +41,13 @@
 }
 
 .panels-list {
-  background-color: #DDD;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 30px 0;
+  .panel {
+    width: 25%;
+  }
 }
 
 #new {
@@ -62,7 +72,7 @@
         text-align: center;
         border-color: transparent;
         &:focus {
-          border-color: rgba(0, 0, 0, 0.15); 
+          border-color: rgba(0, 0, 0, 0.15);
         }
       }
     }
