--- a/app/views/panels/index.html.erb
+++ b/app/views/panels/index.html.erb
@@ -1,23 +1,27 @@
 
-<div class="container" id="home">
+<div class="container-fluid" id="home">
   <h1>Les dernieres chartes</h1>
-  <div class="row panels-list">
+  <div class="panels-list">
       <% @panels.each do |panel| %>
       <div class="col-sm-3 panel">
         <p class="title"><%= panel.title%></p>
+
         <div class="colors">
-          <div class="color-display" style="flex:6; background-color:<%= panel.color1 %>;"><%= panel.color1 %></div>
-          <div class="color-display" style="flex:5; background-color:<%= panel.color2 %>;"><%= panel.color2 %></div>
-          <div class="color-display" style="flex:4; background-color:<%= panel.color3 %>;"><%= panel.color3 %></div>
-          <div class="color-display" style="flex:3; background-color:<%= panel.color4 %>;"><%= panel.color4 %></div>
-          <div class="color-display" style="flex:2; background-color:<%= panel.color5 %>;"><%= panel.color5 %></div>
-          <div class="color-display" style="flex:1; background-color:<%= panel.color6 %>;"><%= panel.color6 %></div>
+          <% i = 0
+          while i < panel.colors_count do
+            color = panel.send :"color#{i+1}" %>
+            <div class="color-display" style="flex:<%= panel.colors_count - i %>; background-color:<%= color %>;"><%= color %></div>
+          <% i +=1
+          end %>
         </div>
-        <p class="description"><%= panel.description %></p>
+
+        <%= link_to(panel) do %>
+          <p class="description"><%=h truncate(panel.description, :length => 40) %></p>
+        <% end %>
       </div>
       <% end %>
   </div>
   <div class="action">
-    <%= link_to 'New Panel', new_panel_path, class: "button-action center" %>
+    <%= link_to 'Ajouter un panel', new_panel_path, class: "button-action center" %>
   </div>
 </div>
